--- a/essai.html
+++ b/essai.html
@@ -1,66 +1,60 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jQuery UI Datepicker - Localize calendar</title>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="i18n/datepicker-ar.js"></script>
-    <script src="i18n/datepicker-fr.js"></script>
-    <script src="i18n/datepicker-he.js"></script>
-    <script src="i18n/datepicker-zh-TW.js"></script>
-    <script>
-        $( function() {
-            $( "#datepicker" ).datepicker( $.datepicker.regional[ "fr" ] );
-            $( "#locale" ).on( "change", function() {
-                $( "#datepicker" ).datepicker( "option",
-                    $.datepicker.regional[ $( this ).val() ] );
-            });
-        } );
-        /* French initialisation for the jQuery UI date picker plugin. */
-        /* Written by Keith Wood (kbwood{at}iinet.com.au) and Stéphane Nahmani (sholby@sholby.net). */
-        jQuery(function($){
-            $.datepicker.regional['fr'] = {
-                closeText: 'Fermer',
-                prevText: '&#x3c;Préc',
-                nextText: 'Suiv&#x3e;',
-                currentText: 'Aujourd\'hui',
-                monthNames: ['Janvier','Fevrier','Mars','Avril','Mai','Juin',
-                    'Juillet','Aout','Septembre','Octobre','Novembre','Decembre'],
-                monthNamesShort: ['Jan','Fev','Mar','Avr','Mai','Jun',
-                    'Jul','Aou','Sep','Oct','Nov','Dec'],
-                dayNames: ['Dimanche','Lundi','Mardi','Mercredi','Jeudi','Vendredi','Samedi'],
-                dayNamesShort: ['Dim','Lun','Mar','Mer','Jeu','Ven','Sam'],
-                dayNamesMin: ['Di','Lu','Ma','Me','Je','Ve','Sa'],
-                weekHeader: 'Sm',
-                dateFormat: 'dd-mm-yy',
-                firstDay: 1,
-                isRTL: false,
-                showMonthAfterYear: false,
-                yearSuffix: '',
-                minDate: 0,
-                maxDate: '+12M +0D',
-                numberOfMonths: 2,
-                showButtonPanel: true
-            };
-            $.datepicker.setDefaults($.datepicker.regional['fr']);
-        });
-    </script>
+    <style>
+        /* Always set the map height explicitly to define the size of the div
+         * element that contains the map. */
+        #map {
+            height: 100%;
+        }
+
+        /* Optional: Makes the sample page fill the window. */
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
+<div id="map"></div>
+<script>
+    var map;
 
-<p>Date: <input type="text" id="datepicker">&nbsp;
-    <select id="locale">
-        <option value="ar">Arabic (&#8235;(&#1575;&#1604;&#1593;&#1585;&#1576;&#1610;&#1577;</option>
-        <option value="zh-TW">Chinese Traditional (&#32321;&#39636;&#20013;&#25991;)</option>
-        <option value="">English</option>
-        <option value="fr" selected="selected">French (Fran&ccedil;ais)</option>
-        <option value="he">Hebrew (&#8235;(&#1506;&#1489;&#1512;&#1497;&#1514;</option>
-    </select></p>
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 2,
+            center: new google.maps.LatLng(2.8, -187.3),
+            mapTypeId: 'terrain'
+        });
+
+        // Create a <script> tag and set the USGS URL as the source.
+        var script = document.createElement('script');
+        // This example uses a local copy of the GeoJSON stored at
+        // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
+        script.src = 'https://www.prevision-meteo.ch/services/json/paris';
+        document.getElementsByTagName('head')[0].appendChild(script);
 
 
+    }
+
+    // Loop through the results array and place a marker for each
+    // set of coordinates.
+    window.eqfeed_callback = function (results) {
+        for (var i = 0; i < results.features.length; i++) {
+            var coords = results.features[i].geometry.coordinates;
+            var latLng = new google.maps.LatLng(coords[1], coords[0]);
+            var marker = new google.maps.Marker({
+                position: latLng,
+                map: map
+            });
+        }
+    }
+
+
+</script>
+
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A &callback=initMap"></script>
 </body>
 </html>
